syntax = "proto3";

option go_package = "src/protos;service";

package weather.api;

import "google/api/annotations.proto";

service WeatherAPI {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {
    option (google.api.http) = {
      post : "/hello",
      body : "*"
    };
  };

  rpc GetCurrentWeather(GetCurrentWeatherRequest)
      returns (GetCurrentWeatherResponse) {
    option (google.api.http) = {
      get : '/current'
    };
  };
}

message SayHelloRequest { string name = 1; }

message SayHelloResponse { string response = 1; }

message GetCurrentWeatherRequest {}

message GetCurrentWeatherResponse {
  double f = 1;
  double c = 2;
}